# readabilityrs

./: .gitattributes  .gitignore  Cargo.toml  README.md
benches/: benchmark.js  benchmark.rs  compare.js  package-lock.json  package.json  readability.rs  run_benchmarks.sh
benchmark/: BENCHMARK_RESULTS.md
src/: article.rs  error.rs  lib.rs  metadata.rs  options.rs  readability.rs  readerable.rs
tests/: mozilla_test_suite.rs
