[package]
name = "readabilityrs"
version = "0.1.0"
edition = "2021"
authors = ["readabilityrs contributors"]
description = "A Rust port of Mozilla's Readability library for extracting article content from web pages"
license = "Apache-2.0"
repository = "https://github.com/theiskaa/readabilityrs"
keywords = ["readability", "parser", "article", "extraction", "html"]
categories = ["parser-implementations", "web-programming"]
readme = "README.md"

[dependencies]
html5ever = "0.27"
markup5ever_rcdom = "0.3"
scraper = "0.20"
kuchikikiki = "0.9"
regex = "1.10"
once_cell = "1.19"
bitflags = "2.4"
thiserror = "1.0"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8.1"

[lib]
name = "readabilityrs"
path = "src/lib.rs"

[[bench]]
name = "readability"
harness = false
